Removed unwanted comments in todo-app.css and added span tag for todos in todos.html

--- a/public/todos.html
+++ b/public/todos.html
@@ -29,8 +29,8 @@
         <ul>
           <li class="TodoItem">
             <div class="TodoItem-container">
-              <input class="TodoItem-checkbox" type="checkbox" /> Submit Saas
-              201 project
+              <input class="TodoItem-checkbox" type="checkbox" />
+              <span>Submit Saas 201 project</span>
               <p class="TodoItem-overduelabel">Overdue</p>
               <a class="TodoItem-delete" href=""
                 ><img src="delete.svg" alt=""
@@ -39,7 +39,8 @@
           </li>
           <li class="TodoItem">
             <div class="TodoItem-container">
-              <input class="TodoItem-checkbox" type="checkbox" /> Buy chocolates
+              <input class="TodoItem-checkbox" type="checkbox" />
+              <span>Buy chocolates</span>
               <p class="TodoItem-overduelabel"></p>
               <a class="TodoItem-delete" href=""
                 ><img src="delete.svg" alt=""
@@ -56,13 +57,14 @@
         <ul>
           <li class="TodoItem">
             <div class="TodoItem-container">
-              <input class="TodoItem-checkbox" type="checkbox" /> Attend AMA
-              Session
+              <input class="TodoItem-checkbox" type="checkbox" />
+              <span>Attend AMA Session</span>
             </div>
           </li>
           <li class="TodoItem">
             <div class="TodoItem-container">
-              <input class="TodoItem-checkbox" type="checkbox" /> Buy chocolates
+              <input class="TodoItem-checkbox" type="checkbox" />
+              <span>Buy chocolates</span>
             </div>
           </li>
         </ul>
@@ -75,15 +77,15 @@
         <ul>
           <li class="TodoItem">
             <div class="TodoItem-container">
-              <input class="TodoItem-checkbox" type="checkbox" /> Attend AMA
-              Session
+              <input class="TodoItem-checkbox" type="checkbox" />
+              <span>Attend AMA Session</span>
               <p class="TodoItem-dateaddded">June 21</p>
             </div>
           </li>
           <li class="TodoItem">
             <div class="TodoItem-container">
-              <input class="TodoItem-checkbox" type="checkbox" /> Complete
-              Capstone
+              <input class="TodoItem-checkbox" type="checkbox" />
+              <span>Complete Capstone</span>
               <p class="TodoItem-dateaddded">June 21</p>
             </div>
           </li>
