Improved UI for Add todo

--- a/public/todos.html
+++ b/public/todos.html
@@ -18,7 +18,7 @@
           name="todo"
           placeholder="What's next?"
         />
-        <input class="AddTodo-date" type="date" name="date" class="" />
+        <input class="AddTodo-date" type="date" name="date" />
         <input class="AddTodo-button" type="button" value="Add" />
       </section>
       <section class="TodoSection">
